--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3595,6 +3595,7 @@ ol {
   background-color: skyblue;
 }
 
+/* 식사, 디저트 버튼 css */
 .filter-button {
   margin: auto;
   align-items: center;
@@ -3602,6 +3603,7 @@ ol {
   background-color: skyblue;
 }
 
+/* 하위 카테고리 버튼 css */
 .sub-filter-button {
   margin: auto;
   align-items: center;
