--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2231,7 +2231,8 @@ ol {
 }
 
 .blog__item__pic img {
-  min-width: 100%;
+  height: 200px;
+  width: 200px;
 }
 
 .blog__item__text {
@@ -2283,6 +2284,11 @@ ol {
   position: relative;
   top: 1px;
   margin-left: 5px;
+}
+
+.blog__item__text .blog__btn img {
+  max-width: 200px;
+  height: 200px;
 }
 
 .blog__pagination {
