fix: 프론트엔드 수정
아까 회의에서 이야기 나온 사항 전부 수정 완료
1. 홈페이지: 선호도 조사 버튼 추가, 탑바 버튼 크기 조정, 블로그 지우기,
   버튼 이름 변경 등
2. 선호도 페이지 삭제하기 위치 선택바 옆으로 이동
3. 메뉴 추천 페이지 버튼 CSS적용(1차)

--- a/public/css/menu-subscribe.css
+++ b/public/css/menu-subscribe.css
@@ -10,10 +10,33 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .spinning {
   animation: spin 3s linear infinite;
+}
+
+/* 버튼 스타일 */
+.filter-button {
+  background: #9b111e;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-right: 15px;
+  margin-left: 15px;
+  text-align: center;
+  opacity: 0.6;
+  transition: 0.3s;
+  margin-bottom: 20px;
+}
+
+.filter-button:hover {
+  opacity: 1;
 }
