--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -1,4 +1,3 @@
-
 .item-checkbox {
   float: left;
   margin-right: 100px;
@@ -8,7 +7,6 @@
   float: right;
 } */
 
-
 #the-menu {
   /* float: right; */
   /* margin-left: 20px; */
@@ -16,3 +14,9 @@
   left: 150px;
 }
 
+#prefer-delete {
+  position: fixed;
+  margin-top: 50px;
+  bottom: 475px;
+  right: 570px;
+}
