feat: 음식 좋아요 프론트 기능 추가 빈 하트와 꽉 찬 하트를 만들어 좋아요로 활용 menu-subscribe.html menu-subscribe.js menu-subscribe.css

--- a/public/css/menu-subscribe.css
+++ b/public/css/menu-subscribe.css
@@ -40,3 +40,18 @@
 .filter-button:hover {
   opacity: 1;
 }
+
+.filter-buttons {
+  text-align: center;
+}
+
+.fa-heart {
+  cursor: pointer;
+  transition: color 0.3s; /* 효과 */
+}
+
+.result-container {
+  display: flex;
+  align-items: center; /* 세로 중앙 정렬 */
+  gap: 10px; /* 아이콘과 텍스트 사이의 간격 */
+}
