feat. comment기능 / feed 상세페이지 기능 완료
테스트완료

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,6 +117,10 @@ ol {
   text-align: center;
 }
 
+.bi-bi-heart-fill {
+  color: red;
+}
+
 .mypage-buttons {
   justify-content: center;
   text-align: center;
