--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,8 +205,10 @@ ol {
   text-transform: uppercase;
   display: inline-block;
   padding: 13px 30px 12px;
-  background: #7fad39;
-  border: none;
+  color: #fff;
+  padding: 8px 22px;
+  border-radius: 6px;
+  background:  #1f8f15;
 }
 
 /* Preloder */
@@ -3453,6 +3455,7 @@ ol {
 
 /* 버튼 스타일 */
 .button {
+  border-radius: 10px;
   width: 200px;
   height: 100px;
   text-align: center;
