--- a/public/css/menu-subscribe.css
+++ b/public/css/menu-subscribe.css
@@ -32,7 +32,7 @@
 
 .filter-button {
   background: #09b820;
-  color: #fff;
+  color: #e4d2d2;
   border-radius: 15px;
   padding: 8px 22px;
   margin-right: 15px;
@@ -60,10 +60,15 @@ button:hover {
 }
 
 .menu-btn {
-  position: relative;
-  left: 300px;
-  font-size: 3rem;
+ 
+  box-shadow: 0 0 5px cyan,
+  0 0 25px cyan;
 }
+.menu-btn:hover {
+  box-shadow: 0 0 5px cyan,
+  0 0 25px cyan, 0 0 50px cyan,; 
+}
+
 
 .fa-heart {
   cursor: pointer;
