--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -10,9 +10,18 @@
 #the-menu {
   /* float: right; */
   /* margin-left: 20px; */
+  /* border-radius: 5px; */
+  border-radius: 3px;
   position: relative;
   left: 150px;
+  font-size: 2rem;
+  background-color: rgb(229, 233, 6);
+  color: #471111;
+  box-shadow: 0 0 5px rgb(11, 160, 31),
+  0 0 25px rgb(0, 255, 21);
 }
+
+
 
 
 
