--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -22,3 +22,9 @@
   z-index: 10;
   cursor: pointer;
 }
+
+.non-clickable {
+  pointer-events: none; /* 클릭 불가능하게 만듭니다 */
+  font-weight: bold; /* 폰트를 진하게 만듭니다 */
+  font-size: 30px;
+}
