--- a/public/css/foodlist-admin.css
+++ b/public/css/foodlist-admin.css
@@ -1,16 +1,27 @@
-/* foodlist-admin에 적용 */
-.food_btn {
-    background-color: skyblue;
-  }
-  
-  .food_btn:hover {
-    background-color: orange;
-  }
-  
-  .food_btn:focus {
-    box-shadow: 0 0 0 3px purple;
-  }
-  
-  .food_btn:active {
-    background-color: red;
-  }
+#modalOpenButton, #modalCloseButton {
+  cursor: pointer;
+}
+
+#modalContainer {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+#modalContent {
+  position: absolute;
+  background-color: #ffffff;
+  width: 300px;
+  height: 150px;
+  padding: 15px;
+}
+
+#modalContainer.hidden {
+  display: none;
+}
