--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,7 +234,7 @@ ol {
   color: #fff;
   padding: 8px 22px;
   border-radius: 6px;
-  background:  #1f8f15;
+  background:  #0d8103;
   position: relative;
   top: 10px;
   right: 200px;
