--- a/public/css/feed-detail.css
+++ b/public/css/feed-detail.css
@@ -1,41 +1,65 @@
 .menu-icon {
-    position: relative;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
 
 .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: -100%;
-    right: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  top: -100%;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .dropdown-menu button {
-    display: block;
-    background: none;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
+  display: block;
+  background: none;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
 }
 
 .menu-icon:hover .dropdown-menu {
-    display: block;
+  display: block;
 }
 
 .site-btn2 {
-    font-size: 14px;
-    color: #ffffff;
-    font-weight: 800;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 13px 30px 12px;
-    background: #7fad39;
-    border: none;
-  }
+  background: #09b820;
+  color: #e4d2d2;
+  border-radius: 15px;
+  padding: 8px 16px;
+  margin-right: 15px;
+  margin-left: 15px;
+  text-align: center;
+  transition: 0.1s;
+  margin-bottom: 20px;
+  font-size: 20px;
+  color: #f7f7f0;
+}
+
+.site-btn3 {
+  background: #09b820;
+  color: #e4d2d2;
+  border-radius: 15px;
+  padding: 8px 16px;
+  margin-right: 15px;
+  margin-left: 15px;
+  text-align: center;
+  transition: 0.1s;
+  font-size: 20px;
+  color: #f7f7f0;
+  margin-bottom: 20px;
+}
+
+#comment-text {
+  margin-top: 20px;
+}
+
+.btn btn-primary {
+}
