--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -45,21 +45,9 @@
   border: 2px solid #161616; /* 2px 두께의 빨간색 테두리 */
 }
 
-.food-list {
-  position: relative;
-  right: 100px;
-}
-
-.foodBtn {
-  color: #fff;
-  padding: 8px 22px;
-  border-radius: 6px;
-  background: #1f8f15;
-}
-
 .button_control {
   display: inline-block;
-  width: 150px;
+  width: 50px;
   height: 50px;
   color: #fff;
   text-decoration: none;
@@ -72,10 +60,27 @@
   right: 100px;
   margin-bottom: 20px;
 }
+
+.button_control2 {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  text-decoration: none;
+  border: 1px solid green;
+  text-align: center;
+  line-height: 50px;
+  background-color: black;
+  border-radius: 10px;
+  position: relative;
+  margin-bottom: 20px;
+  left: 1020px;
+}
+
 .tooltip_layer {
   display: none;
-  width: 500px;
-  height: 400px;
+  width: 650px;
+  height: 300px;
   margin-top: 10px;
   padding: 10px;
   background-color: #f8d776;
@@ -84,4 +89,19 @@
   margin: 0 auto;
   position: relative;
   right: 100px;
+}
+.tooltip_layer2 {
+  display: none;
+  width: 200px;
+  height: 100px;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #f8d776;
+  font-weight: bold;
+  border-radius: 10px;
+  margin: 0 auto;
+  position: relative;
+  right: 0px;
+  margin-bottom: 20px;
+  text-align: center;
 }
