--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -13,13 +13,14 @@
   /* border-radius: 5px; */
   border-radius: 3px;
   position: relative;
-  left: 230px;
+  left: 150px;
   font-size: 2rem;
   background-color: rgb(229, 233, 6);
   color: #471111;
   box-shadow:
     0 0 5px rgb(11, 160, 31),
     0 0 25px rgb(0, 255, 21);
+  margin-bottom: 40px;
 }
 
 #prefer-delete {
@@ -38,7 +39,7 @@
   font-weight: bold; /* 폰트를 진하게 만듭니다 */
   font-size: 30px;
   position: relative;
-  right: 120px;
+  right: 10px;
 }
 /* 특정 ID를 가진 입력 요소의 테두리 색을 진하게 만들기 */
 #survey-search-input {
@@ -57,8 +58,8 @@
   background-color: black;
   border-radius: 10px;
   position: relative;
-  right: 100px;
-  margin-bottom: 20px;
+  right: 300px;
+  margin-bottom: 40px;
 }
 
 .button_control2 {
@@ -88,7 +89,7 @@
   border-radius: 10px;
   margin: 0 auto;
   position: relative;
-  right: 100px;
+  right: 150px;
 }
 .tooltip_layer2 {
   display: none;
@@ -104,4 +105,16 @@
   right: 0px;
   margin-bottom: 20px;
   text-align: center;
+}
+
+#prefer-delete {
+  color: #fff;
+  padding: 8px 22px;
+  border-radius: 6px;
+  background: #4d2ae8;
+  /* transform: all 0.2s ease; */
+  position: absolute;
+  top: 185px;
+  right: 120px;
+  z-index: 10;
 }
