--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -2,24 +2,14 @@
   float: left;
   margin-right: 100px;
 }
-/* 
-.site-btn {
-  float: right;
-} */
+
 
 #the-menu {
-  /* float: right; */
-  /* margin-left: 20px; */
-  /* border-radius: 5px; */
   border-radius: 3px;
   position: relative;
   left: 150px;
-  font-size: 2rem;
-  background-color: rgb(229, 233, 6);
-  color: #471111;
-  box-shadow:
-    0 0 5px rgb(11, 160, 31),
-    0 0 25px rgb(0, 255, 21);
+  font-size: 1.5rem;
+  background-color: #7fad39;
   margin-bottom: 40px;
 }
 
@@ -28,7 +18,6 @@
   padding: 8px 22px;
   border-radius: 6px;
   background: #4d2ae8;
-  /* transform: all 0.2s ease; */
   position: absolute;
   top: 175px;
   right: 120px;
