--- a/public/css/favoritelist.css
+++ b/public/css/favoritelist.css
@@ -59,3 +59,41 @@
 .delete-btn {
   margin: 0 10px; /* 양쪽에 10px의 마진을 설정하여 버튼들 사이에 간격을 줌 */
 }
+
+.btn.btn-primary.go-to-feed-btn {
+  background: #87a86f;
+  border-radius: 15px;
+  padding: 7px 10px;
+  margin-right: 15px;
+  margin-left: 15px;
+  transition: 0.1s;
+  margin-bottom: 20px;
+  font-size: 20px;
+  color: #f7f7f0;
+  z-index: 10;
+  position: relative;
+  border: none;
+}
+
+.btn.btn-primary.go-to-feed-btn:active {
+  top: 4px;
+}
+
+.btn.btn-danger.delete-btn {
+  background: #87a86f;
+  border-radius: 15px;
+  padding: 7px 10px;
+  margin-right: 15px;
+  margin-left: 15px;
+  transition: 0.1s;
+  margin-bottom: 30px;
+  font-size: 20px;
+  color: #f7f7f0;
+  z-index: 10;
+  position: relative;
+  border: none;
+}
+
+.btn.btn-danger.delete-btn {
+  top: 4px;
+}
