--- a/public/css/foodlist.css
+++ b/public/css/foodlist.css
@@ -4,8 +4,52 @@
 }
 
 .foodBtn {
-  color: #fff;
-  padding: 8px 22px;
-  border-radius: 6px;
-  background: #1f8f15;
+  background: #87a86f;
+  color: #e4d2d2;
+  border-radius: 15px;
+  padding: 7px 10px;
+  margin-right: 15px;
+  margin-left: 15px;
+  transition: 0.1s;
+  margin-bottom: 20px;
+  font-size: 20px;
+  color: #f7f7f0;
+  position: relative;
+  border: none;
+}
+
+.foodBtn:active {
+  top: 4px;
+}
+
+#addMenuButton {
+  background: #87a86f;
+  border-radius: 15px;
+  padding: 7px 10px;
+  margin-right: 15px;
+  margin-left: 15px;
+  transition: 0.1s;
+  margin-bottom: 30px;
+  font-size: 20px;
+  color: #f7f7f0;
+  z-index: 10;
+  position: relative;
+  border: none;
+  left: 1020px;
+}
+#addMenuButton:active {
+  top: 4px;
+}
+
+#adminButton {
+  margin: auto;
+}
+
+#searchInput {
+  position: relative;
+  margin-left: 100px;
+}
+
+#searchInput::placeholder {
+  color: black;
 }
