--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,9 +33,8 @@
 html,
 body {
   height: 100%;
-  font-family: 'Cairo', sans-serif;
+  font-family: 'Sunflower', sans-serif;
   -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
 }
 
 h1,
@@ -47,7 +46,7 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: 'Cairo', sans-serif;
+  font-family: 'Sunflower', sans-serif;
 }
 
 h1 {
@@ -76,11 +75,38 @@ h6 {
 
 p {
   font-size: 16px;
-  font-family: 'Cairo', sans-serif;
+  font-family: 'Sunflower', sans-serif;
   color: #6f6f6f;
   font-weight: 400;
   line-height: 26px;
   margin: 0 0 15px 0;
+}
+a {
+  font-family: 'Sunflower', sans-serif;
+}
+
+div {
+  font-family: 'Sunflower', sans-serif;
+}
+
+span {
+  font-family: 'Sunflower', sans-serif;
+}
+
+form {
+  font-family: 'Sunflower', sans-serif;
+}
+
+.reguler {
+  font-weight: 300;
+}
+
+.medium {
+  font-weight: 500;
+}
+
+.bold {
+  font-weight: 700;
 }
 
 img {
@@ -190,9 +216,16 @@ ol {
   color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
-  background: #0cb13d;
+  background: #87a86f;
   letter-spacing: 2px;
-  border-radius: 5px;
+  border-radius: 15px;
+  position: relative;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.mainMenuBtn:active {
+  top: 4px;
 }
 
 .mainPreferBtn {
@@ -202,13 +235,16 @@ ol {
   color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
-  background: #4a39ad;
+  background: #87a86f;
   letter-spacing: 2px;
-  border-radius: 5px;
+  border-radius: 15px;
+  position: relative;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 
-.mainPreferBtn:hover {
-  color: #ccb911;
+.mainPreferBtn:active {
+  top: 4px;
 }
 
 .primary-btn {
@@ -223,19 +259,22 @@ ol {
 }
 
 .site-btn {
-  font-size: 14px;
-  color: #ffffff;
-  font-weight: 800;
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 13px 30px 12px;
-  color: #fff;
-  padding: 8px 22px;
-  border-radius: 6px;
-  background: #1f8f15;
+  background: #87a86f;
+  color: #e4d2d2;
+  border-radius: 15px;
+  padding: 7px 10px;
+  margin-right: 15px;
+  margin-left: 15px;
+  transition: 0.1s;
+  margin-bottom: 20px;
+  font-size: 20px;
+  color: #f7f7f0;
+  z-index: 10;
   position: relative;
-  top: 10px;
-  right: 200px;
+  border: none;
+}
+.site-btn:active {
+  top: 4px;
 }
 
 /* Preloder */
@@ -766,7 +805,6 @@ ol {
   position: absolute;
   left: -35px;
   top: 50%;
-  -webkit-transform: translateY(-35px);
   background: #ffffff;
 }
 
@@ -3175,7 +3213,6 @@ ol {
     position: relative;
     left: 0;
     top: 0;
-    -webkit-transform: translateY(0);
   }
   .categories__slider.owl-carousel .owl-nav button.owl-next {
     right: -10px;
@@ -3483,34 +3520,6 @@ ol {
   display: flex;
 }
 
-/* 버튼 컨테이너 스타일 */
-.button-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 20px; /* 버튼 간격 조정 */
-}
-
-/* 버튼 스타일 */
-.button {
-  border-radius: 10px;
-  width: 200px;
-  height: 100px;
-  text-align: center;
-  line-height: 60px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  margin-bottom: 60px;
-}
-
-/* 이미지 컨테이너 스타일 */
-.image-container {
-  text-align: center;
-}
-
 .button-container2 {
   display: flex;
   justify-content: center;
@@ -3559,7 +3568,6 @@ ol {
 }
 
 #toggle-modal-button {
-  border: 2px solid black;
   background-color: white;
   color: black;
   padding: 14px 28px;
@@ -3568,7 +3576,6 @@ ol {
 }
 
 #update-password-button {
-  border: 1px solid black;
   background-color: white;
   color: black;
   padding: 7px 14px;
@@ -3577,7 +3584,6 @@ ol {
 }
 
 #toggle-modal-button-delete {
-  border: 2px solid black;
   background-color: white;
   color: black;
   padding: 14px 28px;
