fix: 현재 메뉴 기준 지도 API 불러오게 수정.. preference.html 목록 가로 배열 되게끔 변경 foods.users.weight 폴더 삭제 users.actions.controller 및 users.actions.service 변수명 변경 favoritelist.css URL에 css 효과 반영 users.actions.service 메뉴 추천 로직 재정비하여 업로드

--- a/public/css/favoritelist.css
+++ b/public/css/favoritelist.css
@@ -59,3 +59,18 @@
 .delete-btn {
   margin: 0 10px; /* 양쪽에 10px의 마진을 설정하여 버튼들 사이에 간격을 줌 */
 }
+
+.list-group a {
+  &:link {
+    color: blue;
+  }
+  &:visited {
+    color: green;
+  }
+  &:hover {
+    color: red;
+  }
+  &:active {
+    color: black;
+  }
+}
