--- a/public/css/foodlist.css
+++ b/public/css/foodlist.css
@@ -4,18 +4,24 @@
 }
 
 .foodBtn {
-  background: #87a86f;
-  color: #e4d2d2;
-  border-radius: 15px;
   padding: 7px 10px;
-  margin-right: 15px;
-  margin-left: 15px;
-  transition: 0.1s;
-  margin-bottom: 20px;
   font-size: 20px;
-  color: #f7f7f0;
-  position: relative;
   border: none;
+  position: relative;
+  display: inline-block;
+  padding: 7px 30px;
+  color: white;
+  margin: 0 15px 20px 15px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #82c8a0;
+  box-shadow: 0 0 0 1px #82c8a0 inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(126, 194, 155, .7),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
 }
 
 .foodBtn:active {
@@ -23,22 +29,35 @@
 }
 
 #addMenuButton {
-  background: #87a86f;
-  border-radius: 15px;
+  z-index: 10;
+  border: none;
+  left: 1020px;
   padding: 7px 10px;
-  margin-right: 15px;
-  margin-left: 15px;
-  transition: 0.1s;
-  margin-bottom: 30px;
   font-size: 20px;
-  color: #f7f7f0;
   z-index: 10;
   position: relative;
   border: none;
-  left: 1020px;
+  display: inline-block;
+  color: white;
+  margin: 0 15px 30px 15px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #82c8a0;
+  box-shadow: 0 0 0 1px #82c8a0 inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(126, 194, 155, .7),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
 }
+
 #addMenuButton:active {
   top: 4px;
+}
+
+#addMenuButton hover {
+  background-color: #80C49D;
 }
 
 #adminButton {
