--- a/public/css/menu-subscribe.css
+++ b/public/css/menu-subscribe.css
@@ -28,20 +28,30 @@
 
 /* 버튼 스타일 */
 .filter-button {
-  background: #87a86f;
-  color: #e4d2d2;
-  border-radius: 15px;
   padding: 7px 10px;
-  margin-right: 15px;
-  margin-left: 15px;
-  transition: 0.1s;
-  margin-bottom: 20px;
   font-size: 20px;
-  color: #f7f7f0;
   z-index: 10;
   position: relative;
   border: none;
+  display: inline-block;
+  color: white;
+  margin: 0 15px 20px 15px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #82c8a0;
+  box-shadow: 0 0 0 1px #82c8a0 inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(126, 194, 155, .7),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
 }
+
+.filter-button hover {
+  background-color: #80C49D;
+}
+
 
 .filter-button:active {
   top: 4px;
@@ -51,30 +61,18 @@
   border-radius: 10px;
 }
 
+
 /* default button style */
 .btn {
   position: relative;
   border: 0;
-  padding: 15px 25px;
+  padding: 10px 20px;
 }
 
 .btn:active {
   top: 4px;
 }
 
-/* color classes for .btn */
-.btn.blue {
-  box-shadow: 0px 4px #74a3b0;
-}
-
-.btn.blue:active {
-  box-shadow: 0 0 #74a3b0;
-  background-color: #709ca8;
-}
-
-button:hover {
-  box-shadow: 0 0 5px;
-}
 
 .filter-button:hover {
   opacity: 1;
@@ -85,18 +83,6 @@ button:hover {
 
 .filter-buttons {
   text-align: center;
-}
-
-.menu-btn {
-  box-shadow:
-    0 0 5px cyan,
-    0 0 25px cyan;
-}
-.menu-btn:hover {
-  box-shadow:
-    0 0 5px cyan,
-    0 0 25px cyan,
-    0 0 50px cyan;
 }
 
 .fa-heart {
@@ -137,23 +123,33 @@ button:hover {
 
 /* 버튼 스타일 */
 .button {
-  border-radius: 15px;
   width: 200px;
-  height: 100px;
-  text-align: center;
+  height: 80px;
   line-height: 60px;
-  background: #87a86f;
-  color: #fff;
   border: none;
   cursor: pointer;
-  margin-bottom: 60px;
-  padding: 7px 10px;
+  margin-bottom: 20px;
   position: relative;
-  transition: 0.1s;
-  font-size: larger;
+  /*  */
+  display: inline-block;
+  font-size: 25px;
+  color: white;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #7fccde;
+  box-shadow: 0 0 0 1px #7fccde inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(102, 164, 178, .6),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
 }
 .button:active {
   top: 4px;
+}
+.button hover {
+  background-color: #7fccde;
 }
 
 /* 이미지 컨테이너 스타일 */
