--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -3,18 +3,32 @@
   margin-right: 100px;
 }
 
+.tooltip_wrap {
+  margin-left: 100px;
+  height: 100px;
+}
+
 
 #the-menu {
-
-  border-radius: 15px;
-  position: relative;
   left: 150px;
   font-size: 2rem;
-  background: #87a86f;
-  padding: 7px 10px;
-  margin-bottom: 40px;
   transition: 0.1s;
   color: #fff;
+  position: relative;
+  font-size: 22px;
+  padding: 10px 25px;
+  color: white;
+  margin: 20px 10px 50px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #6DA2D9;
+  box-shadow: 0 0 0 1px #6698cb inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(110, 164, 219, .7),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
 }
 
 #the-menu:active {
@@ -22,19 +36,8 @@
 }
 
 #prefer-delete {
-  /* color: #fff;
-  padding: 7px 10px;
-  border-radius: 15px;
-  background: #87a86f;
-  transform: all 0.2s ease;
-  position: absolute;
-  top: 175px;
-  right: 120px;
-  z-index: 10;
-  transition: 0.1s; */
-  background: #87a86f;
-  color: #e4d2d2;
-  border-radius: 15px;
+  background: #82c8a0;
+  border-radius: 6px;
   padding: 7px 10px;
   margin-right: 15px;
   margin-left: 15px;
@@ -45,6 +48,7 @@
   z-index: 10;
   border: none;
   top: 175px;
+  right: 115px;
   position: absolute;
 }
 
@@ -55,44 +59,71 @@
   position: relative;
   right: 10px;
 }
-/* 특정 ID를 가진 입력 요소의 테두리 색을 진하게 만들기 */
+
 #survey-search-input {
-  border: 2px solid #161616; /* 2px 두께의 빨간색 테두리 */
+  border: 0.5px solid #3f3f3f;
+  border-radius: 5px;
+}
+
+.nice-select {
+  border: 0.5px solid #3f3f3f;
+  height: 48px;
+  text-align: center;
 }
 
 .button_control {
+  transition: 0.1s;
+  color: #fff;
+  font-size: 22px;
+  padding: 7px 10px;
+  color: white;
+  margin: 0 40px 15px 15px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #6DA2D9;
+  box-shadow: 0 0 0 1px #6698cb inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(110, 164, 219, .7),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
   display: inline-block;
   width: 50px;
   height: 50px;
-  color: #fff;
   text-decoration: none;
   text-align: center;
   line-height: 50px;
-  background: #87a86f;
-  border-radius: 15px;
   position: relative;
   right: 300px;
-  margin-bottom: 40px;
-  padding: 7px 10px;
-  margin-right: 15px;
-  margin-left: 15px;
-  transition: 0.1s;
+  top: 10px;
 }
 
 .button_control2 {
+  transition: 0.1s;
+  color: #fff;
+  font-size: 22px;
+  padding: 7px 10px;
+  color: white;
+  margin: 0 40px 20px 15px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #6DA2D9;
+  box-shadow: 0 0 0 1px #6698cb inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 rgba(110, 164, 219, .7),
+        0 8px 0 1px rgba(0,0,0,.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
   display: inline-block;
   width: 50px;
   height: 50px;
-  color: #fff;
   text-decoration: none;
   text-align: center;
   line-height: 50px;
-  background: #87a86f;
-  border-radius: 15px;
   position: relative;
-  margin-bottom: 20px;
   left: 1020px;
-  padding: 7px 10px;
 }
 
 .tooltip_layer {
@@ -107,6 +138,7 @@
   margin: 0 auto;
   position: relative;
   right: 150px;
+  z-index: 10;
 }
 .tooltip_layer2 {
   display: none;
@@ -124,11 +156,34 @@
   text-align: center;
 }
 
-#survey-search-input::placeholder {
-  color: black;
-  font-weight: bold;
+#prefer-search-wrap{
+  margin: 0 0 0 100px;
 }
 
-.nice-select {
-  border: 2px solid black;
+#survey-search-input::placeholder {
+  color: rgb(29, 29, 29);
+}
+
+.prefer_add_btn {
+  position: relative;
+  display: inline-block;
+  font-size: 20px;
+  padding: 10px 10px;
+  color: white;
+  border-radius: 6px;
+  border: 1px solid #80C49D;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+  background-color: #82c8a0;
+}
+
+.prefer_add_btn hover {
+  background-color: #80C49D;
+}
+
+.prefer_add_btn:active {
+  box-shadow: 0 0 0 1px #82c8a0 inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 0 0 1px rgba(0,0,0,0.4);
 }
